--- a/content/About.html
+++ b/content/About.html
@@ -102,14 +102,14 @@ img.add_border {
             <header class="site-navbar py-4 bg-white" role="banner">
               <div class="container-fluid">
                 <div class="row align-items-center">
-                <h1>cmstemplate</h1>
+                <h1>cd2021 40823218</h1>
                 <div class="pl-4">
                     <form>
                     <input type="text" placeholder="Search" name="q" id="tipue_search_input" pattern=".{2,}" title="At least 2 characters" required>
                     </form>
                 </div>
                   <!-- <div class="col-11 col-xl-2">
-                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">cmstemplate</a></h1> 
+                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">cd2021 40823218</a></h1> 
                   </div>
                   -->
                   <div class="col-12 col-md-10 d-none d-xl-block">
@@ -134,11 +134,9 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content"> <a href='W1.html'>Next</a> >> W1<br /><h1>About</h1>
-<p>This is <a href="https://github.com/mdecourse/cmstemplate">https://github.com/mdecourse/cmstemplate</a></p>
-<p>目前的 cmsimde 在編輯器下方新增一個 csave 按鈕, 意即 collabrative save, 當動態網際管理系統在多人同時維護登入維護網頁內容時, 編輯各頁面時段, 該頁面可能已經改版, 因此使用 csave 按鈕存檔時, 會導入當下最新的該頁面內容, 並試圖與編輯中的頁面內容進行合併.</p>
-<p>使用 csave 按鈕存檔無法刪除頁面資料.</p>
-<p>使用 Edit All 模式, 無法使用 csave 按鈕（尚未測試).</p>
 <p></p>
+<p>分組倉儲:<a href="https://github.com/40823218/cd2021-group">https://github.com/40823218/cd2021-group</a></p>
+<p>個人倉儲:<a href="https://github.com/40823218/cd2021">https://github.com/40823218/cd2021</a></p>
 <br /> <a href='W1.html'>Next</a> >> W1</div>
         
     <!-- footer -->
