--- a/content/W2.html
+++ b/content/W2.html
@@ -133,9 +133,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='W2.html'>Next</a> >> W2<br /><h1>W1</h1>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/_CczNAIcH6Q" width="560"></iframe></p>
-<br />About << <a href='About.html'>Previous</a> <a href='W2.html'>Next</a> >> W2</div>
+    <div id="tipue_search_content">W1 << <a href='W1.html'>Previous</a> <br /><h1>W2</h1>
+<p>繪製零件圖:</p>
+<p><a href="https://drive.google.com/file/d/1AQxTOYfklga8OQPwZAsf7sWWg6zrATLY/view?usp=sharing">特殊齒輪</a></p>
+<p><img alt="" height="113" src="./../images/特殊齒輪截圖.png" width="200"/></p>
+<p><a href="https://drive.google.com/file/d/1t_UDEJ87tJxyx-6vjagRFpnQso9kGgJr/view?usp=sharing">正齒輪</a></p>
+<p><img alt="" height="113" src="./../images/正齒輪截圖.png" width="200"/></p><br />W1 << <a href='W1.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
