--- a/content/About.html
+++ b/content/About.html
@@ -135,6 +135,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content"> <a href='W1.html'>Next</a> >> W1<br /><h1>About</h1>
 <p>分組倉儲:<a href="https://github.com/40823218/cd2021-group">https://github.com/40823218/cd2021-group</a></p>
+<p>分組網站:<a href="https://40823218.github.io/cd2021-bg5/content/index.html">https://40823218.github.io/cd2021-bg5/content/index.html</a></p>
 <p>個人倉儲:<a href="https://github.com/40823218/cd2021">https://github.com/40823218/cd2021</a></p>
 <p></p>
 <br /> <a href='W1.html'>Next</a> >> W1</div>
