--- a/config/content.htm
+++ b/config/content.htm
@@ -1,11 +1,14 @@
 <h1>About</h1>
 <p>分組倉儲:<a href="https://github.com/40823218/cd2021-group">https://github.com/40823218/cd2021-group</a></p>
+<p>分組網站:<a href="https://40823218.github.io/cd2021-bg5/content/index.html">https://40823218.github.io/cd2021-bg5/content/index.html</a></p>
 <p>個人倉儲:<a href="https://github.com/40823218/cd2021">https://github.com/40823218/cd2021</a></p>
 <p></p>
 <h1>W1</h1>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/_CczNAIcH6Q" width="560"></iframe></p>
 <h1>W2</h1>
 <p>繪製零件圖:</p>
+<p>如何在SOLIDWORKS中呼叫齒輪</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/AkqIBU2WaY8" width="560"></iframe></p>
 <p><a href="https://drive.google.com/file/d/1AQxTOYfklga8OQPwZAsf7sWWg6zrATLY/view?usp=sharing">特殊齒輪</a></p>
 <p><img alt="" height="113" src="/images/特殊齒輪截圖.png" width="200"/></p>
 <p><a href="https://drive.google.com/file/d/1t_UDEJ87tJxyx-6vjagRFpnQso9kGgJr/view?usp=sharing">正齒輪</a></p>
