--- a/config/content.htm
+++ b/config/content.htm
@@ -10,6 +10,6 @@
 <p>如何在SOLIDWORKS中呼叫齒輪</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/AkqIBU2WaY8" width="560"></iframe></p>
 <p><a href="https://drive.google.com/file/d/1AQxTOYfklga8OQPwZAsf7sWWg6zrATLY/view?usp=sharing">特殊齒輪</a></p>
-<p><img alt="" height="113" src="/images/特殊齒輪截圖.png" width="200"/></p>
+<p><img caption="false" height="283" src="/images/特殊齒輪截圖.png" width="500"/></p>
 <p><a href="https://drive.google.com/file/d/1t_UDEJ87tJxyx-6vjagRFpnQso9kGgJr/view?usp=sharing">正齒輪</a></p>
-<p><img alt="" height="113" src="/images/正齒輪截圖.png" width="200"/></p>
+<p><img caption="false" height="283" src="/images/正齒輪截圖.png" width="500"/></p>
