--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,5 +1,6 @@
 <h1>About</h1>
 <p>分組倉儲:<a href="https://github.com/40823218/cd2021-group">https://github.com/40823218/cd2021-group</a></p>
+<p>分組網站:<a href="https://40823218.github.io/cd2021-bg5/content/index.html">https://40823218.github.io/cd2021-bg5/content/index.html</a></p>
 <p>個人倉儲:<a href="https://github.com/40823218/cd2021">https://github.com/40823218/cd2021</a></p>
 <p></p>
 <h1>W1</h1>
