--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -2,7 +2,8 @@
 <p>分組倉儲:<a href="https://github.com/40823218/cd2021-group">https://github.com/40823218/cd2021-group</a></p>
 <p>分組網站:<a href="https://40823218.github.io/cd2021-bg5/content/index.html">https://40823218.github.io/cd2021-bg5/content/index.html</a></p>
 <p>個人倉儲:<a href="https://github.com/40823218/cd2021">https://github.com/40823218/cd2021</a></p>
-<p>gitter:<a href="https://gitter.im/cd2021-bg5/community">https://gitter.im/cd2021-bg5/community</a></p><h1>W1</h1>
+<p>gitter:<a href="https://gitter.im/cd2021-bg5/community">https://gitter.im/cd2021-bg5/community</a></p>
+<h1>W1</h1>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/_CczNAIcH6Q" width="560"></iframe></p>
 <h1>W2</h1>
 <p>繪製零件圖:</p>
@@ -12,3 +13,18 @@
 <p><img caption="false" height="283" src="/images/特殊齒輪截圖.png" width="500"/></p>
 <p><a href="https://drive.google.com/file/d/1t_UDEJ87tJxyx-6vjagRFpnQso9kGgJr/view?usp=sharing">正齒輪</a></p>
 <p><img caption="false" height="283" src="/images/正齒輪截圖.png" width="500"/></p>
+<h1>W3</h1>
+<p>更改題目後繪製零件圖</p>
+<p>組合圖</p>
+<p><img alt="" height="281" src="/images/159195164_228225589026246_5058459738272978678_n.png" width="500"/></p>
+<p>圓盤</p>
+<p><img alt="" height="281" src="/images/157219191_822883698309299_8342697570524734618_n.png" width="500"/></p>
+<p>連桿</p>
+<p><img alt="" height="281" src="/images/157244990_448733259731468_567068433057869102_n.png" width="500"/></p>
+<p>底座</p>
+<p><img alt="" height="281" src="/images/157296992_2490996654357963_4352257469219576088_n.png" width="500"/></p>
+<p>滑塊</p>
+<p><img alt="" height="281" src="/images/157506560_2569002986742371_8203796195321312812_n.png" width="500"/></p>
+<p>滑軌</p>
+<p><img alt="" height="281" src="/images/159045904_1786637184829674_4497561521493991390_n.png" width="500"/></p>
+<p></p>
