--- a/content/About.html
+++ b/content/About.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a></li>
+                     <li><a href='About.html'>About</a><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a></li>
                       </ul>
                 </nav>
               </div>
@@ -137,7 +137,8 @@ img.add_border {
 <p>分組倉儲:<a href="https://github.com/40823218/cd2021-group">https://github.com/40823218/cd2021-group</a></p>
 <p>分組網站:<a href="https://40823218.github.io/cd2021-bg5/content/index.html">https://40823218.github.io/cd2021-bg5/content/index.html</a></p>
 <p>個人倉儲:<a href="https://github.com/40823218/cd2021">https://github.com/40823218/cd2021</a></p>
-<p>gitter:<a href="https://gitter.im/cd2021-bg5/community">https://gitter.im/cd2021-bg5/community</a></p><br /> <a href='W1.html'>Next</a> >> W1</div>
+<p>gitter:<a href="https://gitter.im/cd2021-bg5/community">https://gitter.im/cd2021-bg5/community</a></p>
+<br /> <a href='W1.html'>Next</a> >> W1</div>
         
     <!-- footer -->
       <div class="container">
