--- a/content/W3.html
+++ b/content/W3.html
@@ -133,15 +133,22 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W1 << <a href='W1.html'>Previous</a> <a href='W3.html'>Next</a> >> W3<br /><h1>W2</h1>
-<p>繪製零件圖:</p>
-<p>如何在SOLIDWORKS中呼叫齒輪</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/AkqIBU2WaY8" width="560"></iframe></p>
-<p><a href="https://drive.google.com/file/d/1AQxTOYfklga8OQPwZAsf7sWWg6zrATLY/view?usp=sharing">特殊齒輪</a></p>
-<p><img caption="false" height="283" src="./../images/特殊齒輪截圖.png" width="500"/></p>
-<p><a href="https://drive.google.com/file/d/1t_UDEJ87tJxyx-6vjagRFpnQso9kGgJr/view?usp=sharing">正齒輪</a></p>
-<p><img caption="false" height="283" src="./../images/正齒輪截圖.png" width="500"/></p>
-<br />W1 << <a href='W1.html'>Previous</a> <a href='W3.html'>Next</a> >> W3</div>
+    <div id="tipue_search_content">W2 << <a href='W2.html'>Previous</a> <br /><h1>W3</h1>
+<p>更改題目後繪製零件圖</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/VCLLUxQlwL8" width="560"></iframe></p>
+<p>組合圖</p>
+<p><img alt="" height="281" src="./../images/159195164_228225589026246_5058459738272978678_n.png" width="500"/></p>
+<p>圓盤</p>
+<p><img alt="" height="281" src="./../images/157219191_822883698309299_8342697570524734618_n.png" width="500"/></p>
+<p>連桿</p>
+<p><img alt="" height="281" src="./../images/157244990_448733259731468_567068433057869102_n.png" width="500"/></p>
+<p>底座</p>
+<p><img alt="" height="281" src="./../images/157296992_2490996654357963_4352257469219576088_n.png" width="500"/></p>
+<p>滑塊</p>
+<p><img alt="" height="281" src="./../images/157506560_2569002986742371_8203796195321312812_n.png" width="500"/></p>
+<p>滑軌</p>
+<p><img alt="" height="281" src="./../images/159045904_1786637184829674_4497561521493991390_n.png" width="500"/></p>
+<p></p><br />W2 << <a href='W2.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
