add download links

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -15,6 +15,7 @@
 <p><img caption="false" height="283" src="/images/正齒輪截圖.png" width="500"/></p>
 <h1>W3</h1>
 <p>更改題目後繪製零件圖</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/VCLLUxQlwL8" width="560"></iframe></p>
 <p>組合圖</p>
 <p><img alt="" height="281" src="/images/159195164_228225589026246_5058459738272978678_n.png" width="500"/></p>
 <p>圓盤</p>
