--- a/content/W1.html
+++ b/content/W1.html
@@ -134,6 +134,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='W2.html'>Next</a> >> W2<br /><h1>W1</h1>
+<p>新增倉儲 架設小組及個人網頁</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/_CczNAIcH6Q" width="560"></iframe></p>
 <br />About << <a href='About.html'>Previous</a> <a href='W2.html'>Next</a> >> W2</div>
         
