add download links

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -4,6 +4,7 @@
 <p>個人倉儲:<a href="https://github.com/40823218/cd2021">https://github.com/40823218/cd2021</a></p>
 <p>gitter:<a href="https://gitter.im/cd2021-bg5/community">https://gitter.im/cd2021-bg5/community</a></p>
 <h1>W1</h1>
+<p>新增倉儲 架設小組及個人網頁</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/_CczNAIcH6Q" width="560"></iframe></p>
 <h1>W2</h1>
 <p>繪製零件圖:</p>
@@ -14,18 +15,19 @@
 <p><a href="https://drive.google.com/file/d/1t_UDEJ87tJxyx-6vjagRFpnQso9kGgJr/view?usp=sharing">正齒輪</a></p>
 <p><img caption="false" height="283" src="/images/正齒輪截圖.png" width="500"/></p>
 <h1>W3</h1>
-<p>更改題目後繪製零件圖</p>
+<p>更改題目後繪製零件圖:</p>
+<p>solidworks 碰撞測試影片</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/VCLLUxQlwL8" width="560"></iframe></p>
-<p>組合圖</p>
+<p><a href="https://drive.google.com/file/d/1LyM91gl2dcWIg2tcv0Li5NgopBA3Z6HS/view?usp=sharing">組合圖</a></p>
 <p><img alt="" height="281" src="/images/159195164_228225589026246_5058459738272978678_n.png" width="500"/></p>
-<p>圓盤</p>
+<p><a href="https://drive.google.com/file/d/1X7zvpLAhsYGn0yt5rRc6iu6mnEtLAE3W/view?usp=sharing">圓盤</a></p>
 <p><img alt="" height="281" src="/images/157219191_822883698309299_8342697570524734618_n.png" width="500"/></p>
-<p>連桿</p>
+<p><a href="https://drive.google.com/file/d/1AQECLk1x8e_5SzsBTHmn4_sVMLCuN-rP/view">連桿</a></p>
 <p><img alt="" height="281" src="/images/157244990_448733259731468_567068433057869102_n.png" width="500"/></p>
-<p>底座</p>
+<p><a href="https://drive.google.com/file/d/17Q-O68UKSQXTw7whCKfmYjmGD-W7JGDX/view?usp=sharing">底座</a></p>
 <p><img alt="" height="281" src="/images/157296992_2490996654357963_4352257469219576088_n.png" width="500"/></p>
-<p>滑塊</p>
+<p><a href="https://drive.google.com/file/d/1O6wkYElcF1hf5mH1MB0LZs0nsdV9m83V/view">滑塊</a></p>
 <p><img alt="" height="281" src="/images/157506560_2569002986742371_8203796195321312812_n.png" width="500"/></p>
-<p>滑軌</p>
+<p><a href="https://drive.google.com/file/d/19Gnn25op5mlLmJ8ynPt9uJA2Fyl1YXD4/view?usp=sharing">滑軌</a></p>
 <p><img alt="" height="281" src="/images/159045904_1786637184829674_4497561521493991390_n.png" width="500"/></p>
 <p></p>
