--- a/content/W3.html
+++ b/content/W3.html
@@ -149,7 +149,7 @@ img.add_border {
 <p><img alt="" height="281" src="./../images/157506560_2569002986742371_8203796195321312812_n.png" width="500"/></p>
 <p><a href="https://drive.google.com/file/d/19Gnn25op5mlLmJ8ynPt9uJA2Fyl1YXD4/view?usp=sharing">滑軌</a></p>
 <p><img alt="" height="281" src="./../images/159045904_1786637184829674_4497561521493991390_n.png" width="500"/></p>
-<p></p><br />W2 << <a href='W2.html'>Previous</a> </div>
+<br />W2 << <a href='W2.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
