--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -33,9 +33,9 @@
 <p><a href="https://drive.google.com/file/d/19Gnn25op5mlLmJ8ynPt9uJA2Fyl1YXD4/view?usp=sharing">滑軌</a></p>
 <p><img alt="" height="281" src="/images/159045904_1786637184829674_4497561521493991390_n.png" width="500"/></p>
 <h1>3/12修改圖檔</h1>
-<p>經過量測之後，鋁罐約為直徑60mm高110mm之圓柱，所以加寬了滑軌及滑塊的寬度</p>
-<p>更改後零件載點:<a href="https://drive.google.com/file/d/1d-VNSopMFnwuFXSsO1ybu0OZVG_xv0WT/view?usp=sharing">鋁罐</a> <a href="https://drive.google.com/file/d/16EuYszgPzj5y6_lc9RKe_RpCGAViE5AB/view?usp=sharing">滑軌</a> <a href="https://drive.google.com/file/d/1Jl3g2VDn1HvZWHmPPzmV0t7Z4JDoG8cm/view?usp=sharing">滑塊</a> <a href="https://drive.google.com/file/d/1c3O2fbRErRcCqOArS4NoQG7pk_SOcjnC/view?usp=sharing">組合圖</a></p>
+<p>經過量測後，鋁罐約為直徑60mm高110mm之圓柱，因此加寬了滑軌的寬度</p>
+<p>修改後載點:<a href="https://drive.google.com/file/d/1d-VNSopMFnwuFXSsO1ybu0OZVG_xv0WT/view?usp=sharing">鋁罐</a> <a href="https://drive.google.com/file/d/1Jl3g2VDn1HvZWHmPPzmV0t7Z4JDoG8cm/view?usp=sharing">滑塊</a> <a href="https://drive.google.com/file/d/16EuYszgPzj5y6_lc9RKe_RpCGAViE5AB/view?usp=sharing">滑軌</a> <a href="https://drive.google.com/file/d/1c3O2fbRErRcCqOArS4NoQG7pk_SOcjnC/view?usp=sharing">組合圖</a></p>
+<p><img alt="" height="281" src="/images/159942619_786473515326517_4496092292672574687_n.png" width="500"/></p>
 <p><img alt="" height="281" src="/images/159287230_774899363449123_1098958105267543864_n.png" width="500"/></p>
 <p><img alt="" height="281" src="/images/158863078_437295080660300_5157174128881848114_n.png" width="500"/></p>
-<p><img alt="" height="281" src="/images/159942619_786473515326517_4496092292672574687_n.png" width="500"/></p>
 <p></p>
