--- a/content/W3.html
+++ b/content/W3.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a></li>
+                     <li><a href='About.html'>About</a><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a><li><a href='修改圖檔.html'>修改圖檔</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W2 << <a href='W2.html'>Previous</a> <br /><h1>W3</h1>
+    <div id="tipue_search_content">W2 << <a href='W2.html'>Previous</a> <a href='修改圖檔.html'>Next</a> >> 修改圖檔<br /><h1>W3</h1>
 <p>更改題目後繪製零件圖:</p>
 <p>solidworks 碰撞測試影片</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/VCLLUxQlwL8" width="560"></iframe></p>
@@ -149,7 +149,7 @@ img.add_border {
 <p><img alt="" height="281" src="./../images/157506560_2569002986742371_8203796195321312812_n.png" width="500"/></p>
 <p><a href="https://drive.google.com/file/d/19Gnn25op5mlLmJ8ynPt9uJA2Fyl1YXD4/view?usp=sharing">滑軌</a></p>
 <p><img alt="" height="281" src="./../images/159045904_1786637184829674_4497561521493991390_n.png" width="500"/></p>
-<br />W2 << <a href='W2.html'>Previous</a> </div>
+<br />W2 << <a href='W2.html'>Previous</a> <a href='修改圖檔.html'>Next</a> >> 修改圖檔</div>
         
     <!-- footer -->
       <div class="container">
