--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,5 +1,6 @@
 <h1>About</h1>
 <p>stage1-bg5:製作<span>曲柄滑塊壓罐機</span></p>
+<p><span>使用軟體:solidworks2017 coppeliasim</span></p>
 <p>分組倉儲:<a href="https://github.com/40823218/stage1-bg5">https://github.com/40823218/stage1-bg5</a></p>
 <p>分組網站:<a href="https://40823218.github.io/stage1-bg5/content/About.html">https://40823218.github.io/stage1-bg5/content/About.html</a></p>
 <p>個人倉儲:<a href="https://github.com/40823218/cd2021">https://github.com/40823218/cd2021</a></p>
@@ -16,7 +17,8 @@
 <p><img caption="false" height="283" src="/images/特殊齒輪截圖.png" width="500"/></p>
 <p><a href="https://drive.google.com/file/d/1t_UDEJ87tJxyx-6vjagRFpnQso9kGgJr/view?usp=sharing">正齒輪</a></p>
 <p><img caption="false" height="283" src="/images/正齒輪截圖.png" width="500"/></p>
-<h1>W3</h1>
+<h1>修改圖檔</h1>
+<h2>W3繪製零件圖</h2>
 <p>更改題目後繪製零件圖:</p>
 <p>solidworks 碰撞測試影片</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/VCLLUxQlwL8" width="560"></iframe></p>
@@ -32,13 +34,26 @@
 <p><img alt="" height="281" src="/images/157506560_2569002986742371_8203796195321312812_n.png" width="500"/></p>
 <p><a href="https://drive.google.com/file/d/19Gnn25op5mlLmJ8ynPt9uJA2Fyl1YXD4/view?usp=sharing">滑軌</a></p>
 <p><img alt="" height="281" src="/images/159045904_1786637184829674_4497561521493991390_n.png" width="500"/></p>
-<h1>0312修改圖檔</h1>
+<h2>0312修改圖檔</h2>
 <p>經過量測後，鋁罐約為直徑60mm高110mm之圓柱，因此加寬了滑軌的寬度</p>
 <p>修改後載點:<a href="https://drive.google.com/file/d/1d-VNSopMFnwuFXSsO1ybu0OZVG_xv0WT/view?usp=sharing">鋁罐</a> <a href="https://drive.google.com/file/d/1Jl3g2VDn1HvZWHmPPzmV0t7Z4JDoG8cm/view?usp=sharing">滑塊</a> <a href="https://drive.google.com/file/d/16EuYszgPzj5y6_lc9RKe_RpCGAViE5AB/view?usp=sharing">滑軌</a> <a href="https://drive.google.com/file/d/1c3O2fbRErRcCqOArS4NoQG7pk_SOcjnC/view?usp=sharing">組合圖</a></p>
 <p><img alt="" height="281" src="/images/159942619_786473515326517_4496092292672574687_n.png" width="500"/></p>
 <p><img alt="" height="281" src="/images/159287230_774899363449123_1098958105267543864_n.png" width="500"/></p>
 <p><img alt="" height="281" src="/images/158863078_437295080660300_5157174128881848114_n.png" width="500"/></p>
-<h1>0313修改圖檔</h1>
-<h1>0313放入coppeliasim模擬</h1>
-<p><img alt="" height="281" src="/images/158341884_184583826545555_2175841162782040818_n.png" width="500"/></p>
-<p></p>
+<h2>0313修改圖檔</h2>
+<p>組合圖</p>
+<p><img alt="" height="281" src="/images/159181414_463720324770126_3335785282015953195_n.png" width="500"/></p>
+<p>再組合時面和面應要留有間隙避免發生干涉</p>
+<p><img alt="" height="281" src="/images/159939276_306776560780646_7329618913567361070_n.png" width="500"/></p>
+<p>在銷前加入檔板，防止零件滑出</p>
+<p><img alt="" height="281" src="/images/159653664_910354873123061_9177027678265657091_n.png" width="500"/></p>
+<p><img alt="" height="281" src="/images/159580884_270368627980421_894926241308408490_n.png" width="500"/></p>
+<p>滑軌</p>
+<p><img alt="" height="281" src="/images/159266339_2819453774959214_2007675034687940763_n.png" width="500"/></p>
+<p>將滑軌溝槽高度改為1.5mm，避免模擬時產生碰撞</p>
+<p><img alt="" height="281" src="/images/159484214_3824000144329345_6037612502523750647_n.png" width="500"/></p>
+<p>零件載點:<a href="https://40823218.github.io/stage1-bg5/content/0313.html">https://40823218.github.io/stage1-bg5/content/0313.html</a></p>
+<h1>模擬測試</h1>
+<p><span>將零件檔放入coppeliasim進行模擬</span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/WL4Nl-Xjz58" width="560"></iframe></p>
+<p><a href="https://drive.google.com/file/d/1BTVrN3haCddp-4vQIFQlZlcX-xQ2j3lg/view?usp=sharing">coppeliasim模擬檔案</a></p>
