--- a/content/0313修改圖檔.html
+++ b/content/0313修改圖檔.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a><li><a href='0312修改圖檔.html'>0312修改圖檔</a><li><a href='0313修改圖檔.html'>0313修改圖檔</a><li><a href='0313放入coppeliasim模擬.html'>0313放入coppeliasim模擬</a></li>
+                     <li><a href='About.html'>About</a><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li class='has-children'><a href='修改圖檔.html'>修改圖檔</a><ul class='dropdown'><li><a href='W3繪製零件圖.html'>W3繪製零件圖</a><li><a href='0312修改圖檔.html'>0312修改圖檔</a><li><a href='0313修改圖檔.html'>0313修改圖檔</a></li></ul><li><a href='模擬測試.html'>模擬測試</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,8 +133,20 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">0312修改圖檔 << <a href='0312修改圖檔.html'>Previous</a> <a href='0313放入coppeliasim模擬.html'>Next</a> >> 0313放入coppeliasim模擬<br /><h1>0313修改圖檔</h1>
-<br />0312修改圖檔 << <a href='0312修改圖檔.html'>Previous</a> <a href='0313放入coppeliasim模擬.html'>Next</a> >> 0313放入coppeliasim模擬</div>
+    <div id="tipue_search_content">0312修改圖檔 << <a href='0312修改圖檔.html'>Previous</a> <a href='模擬測試.html'>Next</a> >> 模擬測試<br /><h1>0313修改圖檔</h1>
+<p>組合圖</p>
+<p><img alt="" height="281" src="./../images/159181414_463720324770126_3335785282015953195_n.png" width="500"/></p>
+<p>再組合時面和面應要留有間隙避免發生干涉</p>
+<p><img alt="" height="281" src="./../images/159939276_306776560780646_7329618913567361070_n.png" width="500"/></p>
+<p>在銷前加入檔板，防止零件滑出</p>
+<p><img alt="" height="281" src="./../images/159653664_910354873123061_9177027678265657091_n.png" width="500"/></p>
+<p><img alt="" height="281" src="./../images/159580884_270368627980421_894926241308408490_n.png" width="500"/></p>
+<p>滑軌</p>
+<p><img alt="" height="281" src="./../images/159266339_2819453774959214_2007675034687940763_n.png" width="500"/></p>
+<p>將滑軌溝槽高度改為1.5mm，避免模擬時產生干涉</p>
+<p><img alt="" height="281" src="./../images/159484214_3824000144329345_6037612502523750647_n.png" width="500"/></p>
+<p>零件載點:<a href="https://40823218.github.io/stage1-bg5/content/0313.html">https://40823218.github.io/stage1-bg5/content/0313.html</a></p>
+<br />0312修改圖檔 << <a href='0312修改圖檔.html'>Previous</a> <a href='模擬測試.html'>Next</a> >> 模擬測試</div>
         
     <!-- footer -->
       <div class="container">
