--- a/content/About.html
+++ b/content/About.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a><li><a href='0312修改圖檔.html'>0312修改圖檔</a><li><a href='0313修改圖檔.html'>0313修改圖檔</a><li><a href='0313放入coppeliasim模擬.html'>0313放入coppeliasim模擬</a></li>
+                     <li><a href='About.html'>About</a><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li class='has-children'><a href='修改圖檔.html'>修改圖檔</a><ul class='dropdown'><li><a href='W3繪製零件圖.html'>W3繪製零件圖</a><li><a href='0312修改圖檔.html'>0312修改圖檔</a><li><a href='0313修改圖檔.html'>0313修改圖檔</a></li></ul><li><a href='模擬測試.html'>模擬測試</a></li>
                       </ul>
                 </nav>
               </div>
@@ -135,6 +135,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content"> <a href='W1.html'>Next</a> >> W1<br /><h1>About</h1>
 <p>stage1-bg5:製作<span>曲柄滑塊壓罐機</span></p>
+<p><span>使用軟體:solidworks2017 coppeliasim</span></p>
 <p>分組倉儲:<a href="https://github.com/40823218/stage1-bg5">https://github.com/40823218/stage1-bg5</a></p>
 <p>分組網站:<a href="https://40823218.github.io/stage1-bg5/content/About.html">https://40823218.github.io/stage1-bg5/content/About.html</a></p>
 <p>個人倉儲:<a href="https://github.com/40823218/cd2021">https://github.com/40823218/cd2021</a></p>
