--- a/content/W2.html
+++ b/content/W2.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a><li><a href='0312修改圖檔.html'>0312修改圖檔</a><li><a href='0313修改圖檔.html'>0313修改圖檔</a><li><a href='0313放入coppeliasim模擬.html'>0313放入coppeliasim模擬</a></li>
+                     <li><a href='About.html'>About</a><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li class='has-children'><a href='修改圖檔.html'>修改圖檔</a><ul class='dropdown'><li><a href='W3繪製零件圖.html'>W3繪製零件圖</a><li><a href='0312修改圖檔.html'>0312修改圖檔</a><li><a href='0313修改圖檔.html'>0313修改圖檔</a></li></ul><li><a href='模擬測試.html'>模擬測試</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W1 << <a href='W1.html'>Previous</a> <a href='W3.html'>Next</a> >> W3<br /><h1>W2</h1>
+    <div id="tipue_search_content">W1 << <a href='W1.html'>Previous</a> <a href='修改圖檔.html'>Next</a> >> 修改圖檔<br /><h1>W2</h1>
 <p>原題目是要製作一個間歇運動的機構，下為繪製機構的齒輪零件。</p>
 <p>繪製零件圖:</p>
 <p>如何在SOLIDWORKS中呼叫齒輪</p>
@@ -142,7 +142,7 @@ img.add_border {
 <p><img caption="false" height="283" src="./../images/特殊齒輪截圖.png" width="500"/></p>
 <p><a href="https://drive.google.com/file/d/1t_UDEJ87tJxyx-6vjagRFpnQso9kGgJr/view?usp=sharing">正齒輪</a></p>
 <p><img caption="false" height="283" src="./../images/正齒輪截圖.png" width="500"/></p>
-<br />W1 << <a href='W1.html'>Previous</a> <a href='W3.html'>Next</a> >> W3</div>
+<br />W1 << <a href='W1.html'>Previous</a> <a href='修改圖檔.html'>Next</a> >> 修改圖檔</div>
         
     <!-- footer -->
       <div class="container">
