--- a/content/W3繪製零件圖.html
+++ b/content/W3繪製零件圖.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a><li><a href='0312修改圖檔.html'>0312修改圖檔</a><li><a href='0313修改圖檔.html'>0313修改圖檔</a><li><a href='0313放入coppeliasim模擬.html'>0313放入coppeliasim模擬</a></li>
+                     <li><a href='About.html'>About</a><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li class='has-children'><a href='修改圖檔.html'>修改圖檔</a><ul class='dropdown'><li><a href='W3繪製零件圖.html'>W3繪製零件圖</a><li><a href='0312修改圖檔.html'>0312修改圖檔</a><li><a href='0313修改圖檔.html'>0313修改圖檔</a></li></ul><li><a href='模擬測試.html'>模擬測試</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,9 +133,23 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">0313修改圖檔 << <a href='0313修改圖檔.html'>Previous</a> <br /><h1>0313放入coppeliasim模擬</h1>
-<p><img alt="" height="281" src="./../images/158341884_184583826545555_2175841162782040818_n.png" width="500"/></p>
-<p></p><br />0313修改圖檔 << <a href='0313修改圖檔.html'>Previous</a> </div>
+    <div id="tipue_search_content">修改圖檔 << <a href='修改圖檔.html'>Previous</a> <a href='0312修改圖檔.html'>Next</a> >> 0312修改圖檔<br /><h1>W3繪製零件圖</h1>
+<p>更改題目後繪製零件圖:</p>
+<p>solidworks 作動測試影片</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/VCLLUxQlwL8" width="560"></iframe></p>
+<p><a href="https://drive.google.com/file/d/1LyM91gl2dcWIg2tcv0Li5NgopBA3Z6HS/view?usp=sharing">組合圖</a></p>
+<p><img alt="" height="281" src="./../images/159195164_228225589026246_5058459738272978678_n.png" width="500"/></p>
+<p><a href="https://drive.google.com/file/d/1X7zvpLAhsYGn0yt5rRc6iu6mnEtLAE3W/view?usp=sharing">圓盤</a></p>
+<p><img alt="" height="281" src="./../images/157219191_822883698309299_8342697570524734618_n.png" width="500"/></p>
+<p><a href="https://drive.google.com/file/d/1AQECLk1x8e_5SzsBTHmn4_sVMLCuN-rP/view">連桿</a></p>
+<p><img alt="" height="281" src="./../images/157244990_448733259731468_567068433057869102_n.png" width="500"/></p>
+<p><a href="https://drive.google.com/file/d/17Q-O68UKSQXTw7whCKfmYjmGD-W7JGDX/view?usp=sharing">底座</a></p>
+<p><img alt="" height="281" src="./../images/157296992_2490996654357963_4352257469219576088_n.png" width="500"/></p>
+<p><a href="https://drive.google.com/file/d/1O6wkYElcF1hf5mH1MB0LZs0nsdV9m83V/view">滑塊</a></p>
+<p><img alt="" height="281" src="./../images/157506560_2569002986742371_8203796195321312812_n.png" width="500"/></p>
+<p><a href="https://drive.google.com/file/d/19Gnn25op5mlLmJ8ynPt9uJA2Fyl1YXD4/view?usp=sharing">滑軌</a></p>
+<p><img alt="" height="281" src="./../images/159045904_1786637184829674_4497561521493991390_n.png" width="500"/></p>
+<br />修改圖檔 << <a href='修改圖檔.html'>Previous</a> <a href='0312修改圖檔.html'>Next</a> >> 0312修改圖檔</div>
         
     <!-- footer -->
       <div class="container">
