--- a/content/模擬測試.html
+++ b/content/模擬測試.html
@@ -133,13 +133,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W3繪製零件圖 << <a href='W3繪製零件圖.html'>Previous</a> <a href='0313修改圖檔.html'>Next</a> >> 0313修改圖檔<br /><h1>0312修改圖檔</h1>
-<p>經過量測後，鋁罐約為直徑60mm高110mm之圓柱，因此加寬了滑軌的寬度</p>
-<p>修改後載點:<a href="https://drive.google.com/file/d/1d-VNSopMFnwuFXSsO1ybu0OZVG_xv0WT/view?usp=sharing">鋁罐</a> <a href="https://drive.google.com/file/d/1Jl3g2VDn1HvZWHmPPzmV0t7Z4JDoG8cm/view?usp=sharing">滑塊</a> <a href="https://drive.google.com/file/d/16EuYszgPzj5y6_lc9RKe_RpCGAViE5AB/view?usp=sharing">滑軌</a> <a href="https://drive.google.com/file/d/1c3O2fbRErRcCqOArS4NoQG7pk_SOcjnC/view?usp=sharing">組合圖</a></p>
-<p><img alt="" height="281" src="./../images/159942619_786473515326517_4496092292672574687_n.png" width="500"/></p>
-<p><img alt="" height="281" src="./../images/159287230_774899363449123_1098958105267543864_n.png" width="500"/></p>
-<p><img alt="" height="281" src="./../images/158863078_437295080660300_5157174128881848114_n.png" width="500"/></p>
-<br />W3繪製零件圖 << <a href='W3繪製零件圖.html'>Previous</a> <a href='0313修改圖檔.html'>Next</a> >> 0313修改圖檔</div>
+    <div id="tipue_search_content">0313修改圖檔 << <a href='0313修改圖檔.html'>Previous</a> <br /><h1>模擬測試</h1>
+<p><span>將零件檔放入coppeliasim進行模擬</span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/WL4Nl-Xjz58" width="560"></iframe></p>
+<p><a href="https://drive.google.com/file/d/1BTVrN3haCddp-4vQIFQlZlcX-xQ2j3lg/view?usp=sharing">coppeliasim模擬檔案</a></p><br />0313修改圖檔 << <a href='0313修改圖檔.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
