--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -20,7 +20,7 @@
 <h1>修改圖檔</h1>
 <h2>W3繪製零件圖</h2>
 <p>更改題目後繪製零件圖:</p>
-<p>solidworks 碰撞測試影片</p>
+<p>solidworks 作動測試影片</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/VCLLUxQlwL8" width="560"></iframe></p>
 <p><a href="https://drive.google.com/file/d/1LyM91gl2dcWIg2tcv0Li5NgopBA3Z6HS/view?usp=sharing">組合圖</a></p>
 <p><img alt="" height="281" src="/images/159195164_228225589026246_5058459738272978678_n.png" width="500"/></p>
@@ -50,7 +50,7 @@
 <p><img alt="" height="281" src="/images/159580884_270368627980421_894926241308408490_n.png" width="500"/></p>
 <p>滑軌</p>
 <p><img alt="" height="281" src="/images/159266339_2819453774959214_2007675034687940763_n.png" width="500"/></p>
-<p>將滑軌溝槽高度改為1.5mm，避免模擬時產生碰撞</p>
+<p>將滑軌溝槽高度改為1.5mm，避免模擬時產生干涉</p>
 <p><img alt="" height="281" src="/images/159484214_3824000144329345_6037612502523750647_n.png" width="500"/></p>
 <p>零件載點:<a href="https://40823218.github.io/stage1-bg5/content/0313.html">https://40823218.github.io/stage1-bg5/content/0313.html</a></p>
 <h1>模擬測試</h1>
