--- a/content/stage1-bg5.html
+++ b/content/stage1-bg5.html
@@ -133,14 +133,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='W1.html'>Next</a> >> W1<br /><h1>About</h1>
-<p>stage1-bg5:製作<span>曲柄滑塊壓罐機</span></p>
-<p><span>使用軟體:solidworks2017 coppeliasim</span></p>
-<p>分組倉儲:<a href="https://github.com/40823218/stage1-bg5">https://github.com/40823218/stage1-bg5</a></p>
-<p>分組網站:<a href="https://40823218.github.io/stage1-bg5/content/About.html">https://40823218.github.io/stage1-bg5/content/About.html</a></p>
-<p>個人倉儲:<a href="https://github.com/40823218/cd2021">https://github.com/40823218/cd2021</a></p>
-<p>gitter:<a href="https://gitter.im/cd2021-bg5/community">https://gitter.im/cd2021-bg5/community</a></p>
-<br /> <a href='W1.html'>Next</a> >> W1</div>
+    <div id="tipue_search_content">分組報告 << <a href='分組報告.html'>Previous</a> <br /><h1>stage1-bg5</h1>
+<p>分工部分:建立倉儲及架設網站，編輯網站，繪製SolidWorks零件圖，Coppeliasim模擬，Reveal製作。</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/WTlvZlrDNqY" width="560"></iframe></p><br />分組報告 << <a href='分組報告.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
