--- a/content/模擬測試.html
+++ b/content/模擬測試.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li class='has-children'><a href='修改圖檔.html'>修改圖檔</a><ul class='dropdown'><li><a href='W3繪製零件圖.html'>W3繪製零件圖</a><li><a href='0312修改圖檔.html'>0312修改圖檔</a><li><a href='0313修改圖檔.html'>0313修改圖檔</a></li></ul><li><a href='模擬測試.html'>模擬測試</a></li>
+                     <li><a href='About.html'>About</a><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li class='has-children'><a href='修改圖檔.html'>修改圖檔</a><ul class='dropdown'><li><a href='W3繪製零件圖.html'>W3繪製零件圖</a><li><a href='0312修改圖檔.html'>0312修改圖檔</a><li><a href='0313修改圖檔.html'>0313修改圖檔</a></li></ul><li><a href='模擬測試.html'>模擬測試</a><li class='has-children'><a href='分組報告.html'>分組報告</a><ul class='dropdown'><li><a href='stage1-bg5.html'>stage1-bg5</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,10 +133,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">0313修改圖檔 << <a href='0313修改圖檔.html'>Previous</a> <br /><h1>模擬測試</h1>
+    <div id="tipue_search_content">0313修改圖檔 << <a href='0313修改圖檔.html'>Previous</a> <a href='分組報告.html'>Next</a> >> 分組報告<br /><h1>模擬測試</h1>
 <p><span>將零件檔放入coppeliasim進行模擬</span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/WL4Nl-Xjz58" width="560"></iframe></p>
-<p><a href="https://drive.google.com/file/d/1BTVrN3haCddp-4vQIFQlZlcX-xQ2j3lg/view?usp=sharing">coppeliasim模擬檔案</a></p><br />0313修改圖檔 << <a href='0313修改圖檔.html'>Previous</a> </div>
+<p><a href="https://drive.google.com/file/d/1BTVrN3haCddp-4vQIFQlZlcX-xQ2j3lg/view?usp=sharing">coppeliasim模擬檔案</a></p>
+<br />0313修改圖檔 << <a href='0313修改圖檔.html'>Previous</a> <a href='分組報告.html'>Next</a> >> 分組報告</div>
         
     <!-- footer -->
       <div class="container">
