--- a/config/content.htm
+++ b/config/content.htm
@@ -61,3 +61,5 @@
 <h2>stage1-bg5</h2>
 <p>分工部分:建立倉儲及架設網站，編輯網站，繪製SolidWorks零件圖，Coppeliasim模擬，Reveal製作。</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/WTlvZlrDNqY" width="560"></iframe></p>
+<h1>W5</h1>
+<p><iframe height="500" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQMzTUFlLLSl_l5gtY4Aw7mNaJaEYZEOxclURC7DIjN5JmkV8FYvwnOF3uMD0oK-MzwzWWuboreM6xm/pubhtml?widget=true&amp;headers=false" width="1000"></iframe></p>
