add stage2 form

--- a/content/W3繪製零件圖.html
+++ b/content/W3繪製零件圖.html
@@ -2,7 +2,6 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -141,6 +140,7 @@ img.add_border {
 <p><a href="https://drive.google.com/file/d/1LyM91gl2dcWIg2tcv0Li5NgopBA3Z6HS/view?usp=sharing">組合圖</a></p>
 <p><img alt="" height="281" src="./../images/159195164_228225589026246_5058459738272978678_n.png" width="500"/></p>
 <p><a href="https://drive.google.com/file/d/1X7zvpLAhsYGn0yt5rRc6iu6mnEtLAE3W/view?usp=sharing">圓盤</a></p>
+<p><span>曲柄機構的曲柄，由第一個參考資料可得知，滑塊之行程為曲柄長度的兩倍，行程必須大於一個鋁罐。</span></p>
 <p><img alt="" height="281" src="./../images/157219191_822883698309299_8342697570524734618_n.png" width="500"/></p>
 <p><a href="https://drive.google.com/file/d/1AQECLk1x8e_5SzsBTHmn4_sVMLCuN-rP/view">連桿</a></p>
 <p><img alt="" height="281" src="./../images/157244990_448733259731468_567068433057869102_n.png" width="500"/></p>
