--- a/config/content.htm
+++ b/config/content.htm
@@ -1,10 +1,14 @@
 <h1>About</h1>
-<p>stage1-bg5:製作<span>曲柄滑塊壓罐機</span></p>
+<p><span>個人倉儲:</span><a href="https://github.com/40823218/cd2021">https://github.com/40823218/cd2021</a></p>
+<p><strong>stage1-bg5:製作曲柄滑塊壓罐機</strong></p>
 <p><span>使用軟體:solidworks2017 coppeliasim</span></p>
 <p>分組倉儲:<a href="https://github.com/40823218/stage1-bg5">https://github.com/40823218/stage1-bg5</a></p>
 <p>分組網站:<a href="https://40823218.github.io/stage1-bg5/content/About.html">https://40823218.github.io/stage1-bg5/content/About.html</a></p>
-<p>個人倉儲:<a href="https://github.com/40823218/cd2021">https://github.com/40823218/cd2021</a></p>
 <p>gitter:<a href="https://gitter.im/cd2021-bg5/community">https://gitter.im/cd2021-bg5/community</a></p>
+<p><strong>stage2-bg7:</strong></p>
+<p>分組倉儲:</p>
+<p>分組網站:</p>
+<p>gitter:</p>
 <h1>W1</h1>
 <p>新增倉儲 架設小組及個人網頁</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/_CczNAIcH6Q" width="560"></iframe></p>
@@ -25,6 +29,7 @@
 <p><a href="https://drive.google.com/file/d/1LyM91gl2dcWIg2tcv0Li5NgopBA3Z6HS/view?usp=sharing">組合圖</a></p>
 <p><img alt="" height="281" src="/images/159195164_228225589026246_5058459738272978678_n.png" width="500"/></p>
 <p><a href="https://drive.google.com/file/d/1X7zvpLAhsYGn0yt5rRc6iu6mnEtLAE3W/view?usp=sharing">圓盤</a></p>
+<p><span>曲柄機構的曲柄，由第一個參考資料可得知，滑塊之行程為曲柄長度的兩倍，行程必須大於一個鋁罐。</span></p>
 <p><img alt="" height="281" src="/images/157219191_822883698309299_8342697570524734618_n.png" width="500"/></p>
 <p><a href="https://drive.google.com/file/d/1AQECLk1x8e_5SzsBTHmn4_sVMLCuN-rP/view">連桿</a></p>
 <p><img alt="" height="281" src="/images/157244990_448733259731468_567068433057869102_n.png" width="500"/></p>
@@ -62,4 +67,5 @@
 <p>分工部分:建立倉儲及架設網站，編輯網站，繪製SolidWorks零件圖，Coppeliasim模擬，Reveal製作。</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/WTlvZlrDNqY" width="560"></iframe></p>
 <h1>W5</h1>
+<p>2b報告影片時間表</p>
 <p><iframe height="500" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQMzTUFlLLSl_l5gtY4Aw7mNaJaEYZEOxclURC7DIjN5JmkV8FYvwnOF3uMD0oK-MzwzWWuboreM6xm/pubhtml?widget=true&amp;headers=false" width="1000"></iframe></p>
