--- a/content/index.html
+++ b/content/index.html
@@ -134,12 +134,16 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content"> <a href='W1.html'>Next</a> >> W1<br /><h1>About</h1>
-<p>stage1-bg5:製作<span>曲柄滑塊壓罐機</span></p>
+<p><span>個人倉儲:</span><a href="https://github.com/40823218/cd2021">https://github.com/40823218/cd2021</a></p>
+<p><strong>stage1-bg5:製作曲柄滑塊壓罐機</strong></p>
 <p><span>使用軟體:solidworks2017 coppeliasim</span></p>
 <p>分組倉儲:<a href="https://github.com/40823218/stage1-bg5">https://github.com/40823218/stage1-bg5</a></p>
 <p>分組網站:<a href="https://40823218.github.io/stage1-bg5/content/About.html">https://40823218.github.io/stage1-bg5/content/About.html</a></p>
-<p>個人倉儲:<a href="https://github.com/40823218/cd2021">https://github.com/40823218/cd2021</a></p>
 <p>gitter:<a href="https://gitter.im/cd2021-bg5/community">https://gitter.im/cd2021-bg5/community</a></p>
+<p><strong>stage2-bg7:</strong></p>
+<p>分組倉儲:</p>
+<p>分組網站:</p>
+<p>gitter:</p>
 <br /> <a href='W1.html'>Next</a> >> W1</div>
         
     <!-- footer -->
