--- a/content/About.html
+++ b/content/About.html
@@ -140,11 +140,10 @@ img.add_border {
 <p>分組倉儲:<a href="https://github.com/40823218/stage1-bg5">https://github.com/40823218/stage1-bg5</a></p>
 <p>分組網站:<a href="https://40823218.github.io/stage1-bg5/content/About.html">https://40823218.github.io/stage1-bg5/content/About.html</a></p>
 <p>gitter:<a href="https://gitter.im/cd2021-bg5/community">https://gitter.im/cd2021-bg5/community</a></p>
-<p><strong>stage2-bg7:</strong></p>
+<p><strong>stage2-bg7:發球機</strong></p>
 <p>分組倉儲:</p>
 <p>分組網站:</p>
-<p>gitter:</p>
-<br /> <a href='W1.html'>Next</a> >> W1</div>
+<p>gitter:<a href="https://gitter.im/stage2-bg7/community">https://gitter.im/stage2-bg7/community</a></p><br /> <a href='W1.html'>Next</a> >> W1</div>
         
     <!-- footer -->
       <div class="container">
