--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -5,11 +5,10 @@
 <p>分組倉儲:<a href="https://github.com/40823218/stage1-bg5">https://github.com/40823218/stage1-bg5</a></p>
 <p>分組網站:<a href="https://40823218.github.io/stage1-bg5/content/About.html">https://40823218.github.io/stage1-bg5/content/About.html</a></p>
 <p>gitter:<a href="https://gitter.im/cd2021-bg5/community">https://gitter.im/cd2021-bg5/community</a></p>
-<p><strong>stage2-bg7:</strong></p>
+<p><strong>stage2-bg7:發球機</strong></p>
 <p>分組倉儲:</p>
 <p>分組網站:</p>
-<p>gitter:</p>
-<h1>W1</h1>
+<p>gitter:<a href="https://gitter.im/stage2-bg7/community">https://gitter.im/stage2-bg7/community</a></p><h1>W1</h1>
 <p>新增倉儲 架設小組及個人網頁</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/_CczNAIcH6Q" width="560"></iframe></p>
 <h1>W2</h1>
@@ -29,6 +28,7 @@
 <p><a href="https://drive.google.com/file/d/1LyM91gl2dcWIg2tcv0Li5NgopBA3Z6HS/view?usp=sharing">組合圖</a></p>
 <p><img alt="" height="281" src="/images/159195164_228225589026246_5058459738272978678_n.png" width="500"/></p>
 <p><a href="https://drive.google.com/file/d/1X7zvpLAhsYGn0yt5rRc6iu6mnEtLAE3W/view?usp=sharing">圓盤</a></p>
+<p><span>曲柄機構的曲柄，由第一個參考資料可得知，滑塊之行程為曲柄長度的兩倍，行程必須大於一個鋁罐。</span></p>
 <p><img alt="" height="281" src="/images/157219191_822883698309299_8342697570524734618_n.png" width="500"/></p>
 <p><a href="https://drive.google.com/file/d/1AQECLk1x8e_5SzsBTHmn4_sVMLCuN-rP/view">連桿</a></p>
 <p><img alt="" height="281" src="/images/157244990_448733259731468_567068433057869102_n.png" width="500"/></p>
