--- a/content/CoppeliaSim模擬.html
+++ b/content/CoppeliaSim模擬.html
@@ -133,10 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">分組報告 << <a href='分組報告.html'>Previous</a> <a href='W5.html'>Next</a> >> W5<br /><h1>stage1-bg5</h1>
-<p>分工部分:建立倉儲及架設網站，編輯網站，繪製SolidWorks零件圖，Coppeliasim模擬，Reveal製作。</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/WTlvZlrDNqY" width="560"></iframe></p>
-<br />分組報告 << <a href='分組報告.html'>Previous</a> <a href='W5.html'>Next</a> >> W5</div>
+    <div id="tipue_search_content">零件圖 << <a href='零件圖.html'>Previous</a> <br /><h1>CoppeliaSim模擬</h1>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/sCrbots4E8Y" title="YouTube video player" width="560"></iframe></p><br />零件圖 << <a href='零件圖.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
