--- a/content/index.html
+++ b/content/index.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li class='has-children'><a href='修改圖檔.html'>修改圖檔</a><ul class='dropdown'><li><a href='W3繪製零件圖.html'>W3繪製零件圖</a><li><a href='0312修改圖檔.html'>0312修改圖檔</a><li><a href='0313修改圖檔.html'>0313修改圖檔</a></li></ul><li><a href='模擬測試.html'>模擬測試</a><li class='has-children'><a href='分組報告.html'>分組報告</a><ul class='dropdown'><li><a href='stage1-bg5.html'>stage1-bg5</a></li></ul><li><a href='W5.html'>W5</a></li>
+                     <li><a href='About.html'>About</a><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li class='has-children'><a href='修改圖檔.html'>修改圖檔</a><ul class='dropdown'><li><a href='W3繪製零件圖.html'>W3繪製零件圖</a><li><a href='0312修改圖檔.html'>0312修改圖檔</a><li><a href='0313修改圖檔.html'>0313修改圖檔</a></li></ul><li><a href='模擬測試.html'>模擬測試</a><li class='has-children'><a href='分組報告.html'>分組報告</a><ul class='dropdown'><li><a href='stage1-bg5.html'>stage1-bg5</a></li></ul><li><a href='W5.html'>W5</a><li class='has-children'><a href='W7.html'>W7</a><ul class='dropdown'><li><a href='零件圖.html'>零件圖</a><li><a href='CoppeliaSim模擬.html'>CoppeliaSim模擬</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,9 +141,10 @@ img.add_border {
 <p>分組網站:<a href="https://40823218.github.io/stage1-bg5/content/About.html">https://40823218.github.io/stage1-bg5/content/About.html</a></p>
 <p>gitter:<a href="https://gitter.im/cd2021-bg5/community">https://gitter.im/cd2021-bg5/community</a></p>
 <p><strong>stage2-bg7:發球機</strong></p>
-<p>分組倉儲:</p>
-<p>分組網站:</p>
-<p>gitter:<a href="https://gitter.im/stage2-bg7/community">https://gitter.im/stage2-bg7/community</a></p><br /> <a href='W1.html'>Next</a> >> W1</div>
+<p>分組倉儲:<a href="https://github.com/40823218/stage2-bg7">https://github.com/40823218/stage2-bg7</a></p>
+<p>分組網站:<a href="https://40823238.github.io/stage2-bg7/content/index.html">https://40823238.github.io/stage2-bg7/content/index.html</a></p>
+<p>gitter:<a href="https://gitter.im/stage2-bg7/community">https://gitter.im/stage2-bg7/community</a></p>
+<br /> <a href='W1.html'>Next</a> >> W1</div>
         
     <!-- footer -->
       <div class="container">
