--- a/content/零件圖.html
+++ b/content/零件圖.html
@@ -133,10 +133,15 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">分組報告 << <a href='分組報告.html'>Previous</a> <a href='W5.html'>Next</a> >> W5<br /><h1>stage1-bg5</h1>
-<p>分工部分:建立倉儲及架設網站，編輯網站，繪製SolidWorks零件圖，Coppeliasim模擬，Reveal製作。</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/WTlvZlrDNqY" width="560"></iframe></p>
-<br />分組報告 << <a href='分組報告.html'>Previous</a> <a href='W5.html'>Next</a> >> W5</div>
+    <div id="tipue_search_content">W7 << <a href='W7.html'>Previous</a> <a href='CoppeliaSim模擬.html'>Next</a> >> CoppeliaSim模擬<br /><h1>零件圖</h1>
+<p><a href="https://drive.google.com/file/d/1Q6hQEx5lVr0ax_K7Psk0xeU6zcTqvowX/view?usp=sharing">組合圖</a></p>
+<p><img alt="" height="279" src="./../images/SLDWORKS_bBDwRsu1AB.png" width="500"/></p>
+<p><span>為了要將球發射出去，將兩圓筒最近距離設為和乒乓球相同的40mm</span></p>
+<p><a href="https://drive.google.com/file/d/1GPoo511JFA52C1Jbp9i68MWSrjBV0Z4y/view?usp=sharing">底座和軌道</a></p>
+<p><img alt="" height="279" src="./../images/SLDWORKS_xUkSeuQY6p.png" width="500"/></p>
+<p><a href="https://drive.google.com/file/d/1ZydPC-NgOyFVfWh__YlhCbTBJX1Gti2S/view?usp=sharing">圓筒</a></p>
+<p><img alt="" height="279" src="./../images/SLDWORKS_Xwc53e9gMK.png" width="500"/></p>
+<br />W7 << <a href='W7.html'>Previous</a> <a href='CoppeliaSim模擬.html'>Next</a> >> CoppeliaSim模擬</div>
         
     <!-- footer -->
       <div class="container">
