--- a/config/content.htm
+++ b/config/content.htm
@@ -71,7 +71,7 @@
 <p><iframe height="500" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQMzTUFlLLSl_l5gtY4Aw7mNaJaEYZEOxclURC7DIjN5JmkV8FYvwnOF3uMD0oK-MzwzWWuboreM6xm/pubhtml?widget=true&amp;headers=false" width="1000"></iframe></p>
 <h1>W7</h1>
 <h2>零件圖</h2>
-<p><a href="https://drive.google.com/file/d/1Q6hQEx5lVr0ax_K7Psk0xeU6zcTqvowX/view?usp=sharing">組合圖</a></p>
+<p><a href="https://drive.google.com/file/d/1Q6hQEx5lVr0ax_K7Psk0xeU6zcTqvowX/view?usp=sharing">組合圖</a> 連結可下載檔案</p>
 <p><img alt="" height="279" src="/images/SLDWORKS_bBDwRsu1AB.png" width="500"/></p>
 <p><span>為了要將球發射出去，將兩圓筒最近距離設為和乒乓球相同的40mm</span></p>
 <p><a href="https://drive.google.com/file/d/1GPoo511JFA52C1Jbp9i68MWSrjBV0Z4y/view?usp=sharing">底座和軌道</a></p>
@@ -79,4 +79,5 @@
 <p><a href="https://drive.google.com/file/d/1ZydPC-NgOyFVfWh__YlhCbTBJX1Gti2S/view?usp=sharing">圓筒</a></p>
 <p><img alt="" height="279" src="/images/SLDWORKS_Xwc53e9gMK.png" width="500"/></p>
 <h2>CoppeliaSim模擬</h2>
+<p>模擬檔案下載:<a href="https://drive.google.com/file/d/12AT3t7wfKkKWZwZ15KEAG74njWn7D8ro/view?usp=sharing">https://drive.google.com/file/d/12AT3t7wfKkKWZwZ15KEAG74njWn7D8ro/view?usp=sharing</a></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/sCrbots4E8Y" title="YouTube video player" width="560"></iframe></p>
