--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -6,9 +6,10 @@
 <p>分組網站:<a href="https://40823218.github.io/stage1-bg5/content/About.html">https://40823218.github.io/stage1-bg5/content/About.html</a></p>
 <p>gitter:<a href="https://gitter.im/cd2021-bg5/community">https://gitter.im/cd2021-bg5/community</a></p>
 <p><strong>stage2-bg7:發球機</strong></p>
-<p>分組倉儲:</p>
-<p>分組網站:</p>
-<p>gitter:<a href="https://gitter.im/stage2-bg7/community">https://gitter.im/stage2-bg7/community</a></p><h1>W1</h1>
+<p>分組倉儲:<a href="https://github.com/40823218/stage2-bg7">https://github.com/40823218/stage2-bg7</a></p>
+<p>分組網站:<a href="https://40823238.github.io/stage2-bg7/content/index.html">https://40823238.github.io/stage2-bg7/content/index.html</a></p>
+<p>gitter:<a href="https://gitter.im/stage2-bg7/community">https://gitter.im/stage2-bg7/community</a></p>
+<h1>W1</h1>
 <p>新增倉儲 架設小組及個人網頁</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/_CczNAIcH6Q" width="560"></iframe></p>
 <h1>W2</h1>
@@ -68,3 +69,14 @@
 <h1>W5</h1>
 <p>2b報告影片時間表</p>
 <p><iframe height="500" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQMzTUFlLLSl_l5gtY4Aw7mNaJaEYZEOxclURC7DIjN5JmkV8FYvwnOF3uMD0oK-MzwzWWuboreM6xm/pubhtml?widget=true&amp;headers=false" width="1000"></iframe></p>
+<h1>W7</h1>
+<h2>零件圖</h2>
+<p><a href="https://drive.google.com/file/d/1Q6hQEx5lVr0ax_K7Psk0xeU6zcTqvowX/view?usp=sharing">組合圖</a></p>
+<p><img alt="" height="279" src="/images/SLDWORKS_bBDwRsu1AB.png" width="500"/></p>
+<p><span>為了要將球發射出去，將兩圓筒最近距離設為和乒乓球相同的40mm</span></p>
+<p><a href="https://drive.google.com/file/d/1GPoo511JFA52C1Jbp9i68MWSrjBV0Z4y/view?usp=sharing">底座和軌道</a></p>
+<p><img alt="" height="279" src="/images/SLDWORKS_xUkSeuQY6p.png" width="500"/></p>
+<p><a href="https://drive.google.com/file/d/1ZydPC-NgOyFVfWh__YlhCbTBJX1Gti2S/view?usp=sharing">圓筒</a></p>
+<p><img alt="" height="279" src="/images/SLDWORKS_Xwc53e9gMK.png" width="500"/></p>
+<h2>CoppeliaSim模擬</h2>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/sCrbots4E8Y" title="YouTube video player" width="560"></iframe></p>
