--- a/content/零件圖.html
+++ b/content/零件圖.html
@@ -134,7 +134,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W7 << <a href='W7.html'>Previous</a> <a href='CoppeliaSim模擬.html'>Next</a> >> CoppeliaSim模擬<br /><h1>零件圖</h1>
-<p><a href="https://drive.google.com/file/d/1Q6hQEx5lVr0ax_K7Psk0xeU6zcTqvowX/view?usp=sharing">組合圖</a></p>
+<p><a href="https://drive.google.com/file/d/1Q6hQEx5lVr0ax_K7Psk0xeU6zcTqvowX/view?usp=sharing">組合圖</a> 連結可下載檔案</p>
 <p><img alt="" height="279" src="./../images/SLDWORKS_bBDwRsu1AB.png" width="500"/></p>
 <p><span>為了要將球發射出去，將兩圓筒最近距離設為和乒乓球相同的40mm</span></p>
 <p><a href="https://drive.google.com/file/d/1GPoo511JFA52C1Jbp9i68MWSrjBV0Z4y/view?usp=sharing">底座和軌道</a></p>
