--- a/content/stage2發球機構圖.html
+++ b/content/stage2發球機構圖.html
@@ -133,8 +133,15 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">模擬測試 << <a href='模擬測試.html'>Previous</a> <a href='stage1-bg5.html'>Next</a> >> stage1-bg5<br /><h1>分組報告</h1>
-<br />模擬測試 << <a href='模擬測試.html'>Previous</a> <a href='stage1-bg5.html'>Next</a> >> stage1-bg5</div>
+    <div id="tipue_search_content">W7 << <a href='W7.html'>Previous</a> <a href='CoppeliaSim模擬.html'>Next</a> >> CoppeliaSim模擬<br /><h1>stage2發球機構圖</h1>
+<p><a href="https://drive.google.com/file/d/1Q6hQEx5lVr0ax_K7Psk0xeU6zcTqvowX/view?usp=sharing">組合圖</a> 連結可下載檔案</p>
+<p><img alt="" height="279" src="./../images/SLDWORKS_bBDwRsu1AB.png" width="500"/></p>
+<p><span>為了要將球發射出去，將兩圓筒最近距離設為和乒乓球相同的40mm</span></p>
+<p><a href="https://drive.google.com/file/d/1GPoo511JFA52C1Jbp9i68MWSrjBV0Z4y/view?usp=sharing">底座和軌道</a></p>
+<p><img alt="" height="279" src="./../images/SLDWORKS_xUkSeuQY6p.png" width="500"/></p>
+<p><a href="https://drive.google.com/file/d/1ZydPC-NgOyFVfWh__YlhCbTBJX1Gti2S/view?usp=sharing">圓筒</a></p>
+<p><img alt="" height="279" src="./../images/SLDWORKS_Xwc53e9gMK.png" width="500"/></p>
+<br />W7 << <a href='W7.html'>Previous</a> <a href='CoppeliaSim模擬.html'>Next</a> >> CoppeliaSim模擬</div>
         
     <!-- footer -->
       <div class="container">
