--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -9,6 +9,7 @@
 <p>分組倉儲:<a href="https://github.com/40823218/stage2-bg7">https://github.com/40823218/stage2-bg7</a></p>
 <p>分組網站:<a href="https://40823238.github.io/stage2-bg7/content/index.html">https://40823238.github.io/stage2-bg7/content/index.html</a></p>
 <p>gitter:<a href="https://gitter.im/stage2-bg7/community">https://gitter.im/stage2-bg7/community</a></p>
+<p>discord:<a href="https://discord.com/invite/xkhgSc9aWb">https://discord.com/invite/xkhgSc9aWb</a></p>
 <h1>W1</h1>
 <p>新增倉儲 架設小組及個人網頁</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/_CczNAIcH6Q" width="560"></iframe></p>
@@ -70,8 +71,8 @@
 <p>2b報告影片時間表</p>
 <p><iframe height="500" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQMzTUFlLLSl_l5gtY4Aw7mNaJaEYZEOxclURC7DIjN5JmkV8FYvwnOF3uMD0oK-MzwzWWuboreM6xm/pubhtml?widget=true&amp;headers=false" width="1000"></iframe></p>
 <h1>W7</h1>
-<h2>零件圖</h2>
-<p><a href="https://drive.google.com/file/d/1Q6hQEx5lVr0ax_K7Psk0xeU6zcTqvowX/view?usp=sharing">組合圖</a></p>
+<h2>stage2發球機構圖</h2>
+<p><a href="https://drive.google.com/file/d/1Q6hQEx5lVr0ax_K7Psk0xeU6zcTqvowX/view?usp=sharing">組合圖</a> 連結可下載檔案</p>
 <p><img alt="" height="279" src="/images/SLDWORKS_bBDwRsu1AB.png" width="500"/></p>
 <p><span>為了要將球發射出去，將兩圓筒最近距離設為和乒乓球相同的40mm</span></p>
 <p><a href="https://drive.google.com/file/d/1GPoo511JFA52C1Jbp9i68MWSrjBV0Z4y/view?usp=sharing">底座和軌道</a></p>
@@ -79,4 +80,13 @@
 <p><a href="https://drive.google.com/file/d/1ZydPC-NgOyFVfWh__YlhCbTBJX1Gti2S/view?usp=sharing">圓筒</a></p>
 <p><img alt="" height="279" src="/images/SLDWORKS_Xwc53e9gMK.png" width="500"/></p>
 <h2>CoppeliaSim模擬</h2>
+<p>模擬檔案下載:<a href="https://drive.google.com/file/d/12AT3t7wfKkKWZwZ15KEAG74njWn7D8ro/view?usp=sharing">https://drive.google.com/file/d/12AT3t7wfKkKWZwZ15KEAG74njWn7D8ro/view?usp=sharing</a></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/sCrbots4E8Y" title="YouTube video player" width="560"></iframe></p>
+<h1>W8</h1>
+<h2>4/12模擬(無球)</h2>
+<p>CoppelisaSim檔案下載:<a href="https://drive.google.com/file/d/1py0BHoKMlVCEvJfn7cyLHaJK2n14c_m1/view?usp=sharing">https://drive.google.com/file/d/1py0BHoKMlVCEvJfn7cyLHaJK2n14c_m1/view?usp=sharing</a></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/BLFhSflxA-4" title="YouTube video player" width="560"></iframe></p>
+<h2><span>4/13模擬(有球)</span></h2>
+<p><span>CoppelisaSim檔案下載:<a href="https://drive.google.com/file/d/15tYq9ufaD22cAnGwqmCR1SU-TwF0cQ6G/view?usp=sharing">https://drive.google.com/file/d/15tYq9ufaD22cAnGwqmCR1SU-TwF0cQ6G/view?usp=sharing</a></span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/7uN28_a-y3U" title="YouTube video player" width="560"></iframe></p>
+<p><span> </span></p>
