--- a/content/0413模擬(有球).html
+++ b/content/0413模擬(有球).html
@@ -133,8 +133,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">模擬測試 << <a href='模擬測試.html'>Previous</a> <a href='stage1-bg5.html'>Next</a> >> stage1-bg5<br /><h1>分組報告</h1>
-<br />模擬測試 << <a href='模擬測試.html'>Previous</a> <a href='stage1-bg5.html'>Next</a> >> stage1-bg5</div>
+    <div id="tipue_search_content">0412模擬(無球) << <a href='0412模擬(無球).html'>Previous</a> <br /><h1>0413模擬(有球)</h1>
+<p><span>CoppelisaSim檔案下載:<a href="https://drive.google.com/file/d/15tYq9ufaD22cAnGwqmCR1SU-TwF0cQ6G/view?usp=sharing">https://drive.google.com/file/d/15tYq9ufaD22cAnGwqmCR1SU-TwF0cQ6G/view?usp=sharing</a></span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/7uN28_a-y3U" title="YouTube video player" width="560"></iframe></p>
+<p><span> </span></p><br />0412模擬(無球) << <a href='0412模擬(無球).html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
