--- a/content/W8.html
+++ b/content/W8.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li class='has-children'><a href='修改圖檔.html'>修改圖檔</a><ul class='dropdown'><li><a href='W3繪製零件圖.html'>W3繪製零件圖</a><li><a href='0312修改圖檔.html'>0312修改圖檔</a><li><a href='0313修改圖檔.html'>0313修改圖檔</a></li></ul><li><a href='模擬測試.html'>模擬測試</a><li class='has-children'><a href='分組報告.html'>分組報告</a><ul class='dropdown'><li><a href='stage1-bg5.html'>stage1-bg5</a></li></ul><li><a href='W5.html'>W5</a><li class='has-children'><a href='W7.html'>W7</a><ul class='dropdown'><li><a href='零件圖.html'>零件圖</a><li><a href='CoppeliaSim模擬.html'>CoppeliaSim模擬</a></li>
+                     <li><a href='About.html'>About</a><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li class='has-children'><a href='修改圖檔.html'>修改圖檔</a><ul class='dropdown'><li><a href='W3繪製零件圖.html'>W3繪製零件圖</a><li><a href='0312修改圖檔.html'>0312修改圖檔</a><li><a href='0313修改圖檔.html'>0313修改圖檔</a></li></ul><li><a href='模擬測試.html'>模擬測試</a><li class='has-children'><a href='分組報告.html'>分組報告</a><ul class='dropdown'><li><a href='stage1-bg5.html'>stage1-bg5</a></li></ul><li><a href='W5.html'>W5</a><li class='has-children'><a href='W7.html'>W7</a><ul class='dropdown'><li><a href='stage2發球機構圖.html'>stage2發球機構圖</a><li><a href='CoppeliaSim模擬.html'>CoppeliaSim模擬</a></li></ul><li class='has-children'><a href='W8.html'>W8</a><ul class='dropdown'><li><a href='0412模擬(無球).html'>0412模擬(無球)</a><li><a href='0413模擬(有球).html'>0413模擬(有球)</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,15 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W7 << <a href='W7.html'>Previous</a> <a href='CoppeliaSim模擬.html'>Next</a> >> CoppeliaSim模擬<br /><h1>零件圖</h1>
-<p><a href="https://drive.google.com/file/d/1Q6hQEx5lVr0ax_K7Psk0xeU6zcTqvowX/view?usp=sharing">組合圖</a> 連結可下載檔案</p>
-<p><img alt="" height="279" src="./../images/SLDWORKS_bBDwRsu1AB.png" width="500"/></p>
-<p><span>為了要將球發射出去，將兩圓筒最近距離設為和乒乓球相同的40mm</span></p>
-<p><a href="https://drive.google.com/file/d/1GPoo511JFA52C1Jbp9i68MWSrjBV0Z4y/view?usp=sharing">底座和軌道</a></p>
-<p><img alt="" height="279" src="./../images/SLDWORKS_xUkSeuQY6p.png" width="500"/></p>
-<p><a href="https://drive.google.com/file/d/1ZydPC-NgOyFVfWh__YlhCbTBJX1Gti2S/view?usp=sharing">圓筒</a></p>
-<p><img alt="" height="279" src="./../images/SLDWORKS_Xwc53e9gMK.png" width="500"/></p>
-<br />W7 << <a href='W7.html'>Previous</a> <a href='CoppeliaSim模擬.html'>Next</a> >> CoppeliaSim模擬</div>
+    <div id="tipue_search_content">CoppeliaSim模擬 << <a href='CoppeliaSim模擬.html'>Previous</a> <a href='0412模擬(無球).html'>Next</a> >> 0412模擬(無球)<br /><h1>W8</h1>
+<br />CoppeliaSim模擬 << <a href='CoppeliaSim模擬.html'>Previous</a> <a href='0412模擬(無球).html'>Next</a> >> 0412模擬(無球)</div>
         
     <!-- footer -->
       <div class="container">
