--- a/config/content.htm
+++ b/config/content.htm
@@ -81,12 +81,12 @@
 <p><img alt="" height="279" src="/images/SLDWORKS_Xwc53e9gMK.png" width="500"/></p>
 <h2>CoppeliaSim模擬</h2>
 <p>模擬檔案下載:<a href="https://drive.google.com/file/d/12AT3t7wfKkKWZwZ15KEAG74njWn7D8ro/view?usp=sharing">https://drive.google.com/file/d/12AT3t7wfKkKWZwZ15KEAG74njWn7D8ro/view?usp=sharing</a></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/sCrbots4E8Y" title="YouTube video player" width="560"></iframe></p>
-<h1>W8</h1>
+<p>因要將球射出，加大馬達扭力後，造成圓筒晃動。</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/sCrbots4E8Y" title="YouTube video player" width="560"></iframe></p><h1>W8</h1>
 <h2>0412模擬(無球)</h2>
 <p>CoppelisaSim檔案下載:<a href="https://drive.google.com/file/d/1py0BHoKMlVCEvJfn7cyLHaJK2n14c_m1/view?usp=sharing">https://drive.google.com/file/d/1py0BHoKMlVCEvJfn7cyLHaJK2n14c_m1/view?usp=sharing</a></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/BLFhSflxA-4" title="YouTube video player" width="560"></iframe></p>
-<h2><span>0413模擬(有球)</span></h2>
+<h2>0413模擬(有球)</h2>
 <p><span>CoppelisaSim檔案下載:<a href="https://drive.google.com/file/d/15tYq9ufaD22cAnGwqmCR1SU-TwF0cQ6G/view?usp=sharing">https://drive.google.com/file/d/15tYq9ufaD22cAnGwqmCR1SU-TwF0cQ6G/view?usp=sharing</a></span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/7uN28_a-y3U" title="YouTube video player" width="560"></iframe></p>
 <p><span> </span></p>
