--- a/content/CoppeliaSim模擬.html
+++ b/content/CoppeliaSim模擬.html
@@ -135,8 +135,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content">stage2發球機構圖 << <a href='stage2發球機構圖.html'>Previous</a> <a href='W8.html'>Next</a> >> W8<br /><h1>CoppeliaSim模擬</h1>
 <p>模擬檔案下載:<a href="https://drive.google.com/file/d/12AT3t7wfKkKWZwZ15KEAG74njWn7D8ro/view?usp=sharing">https://drive.google.com/file/d/12AT3t7wfKkKWZwZ15KEAG74njWn7D8ro/view?usp=sharing</a></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/sCrbots4E8Y" title="YouTube video player" width="560"></iframe></p>
-<br />stage2發球機構圖 << <a href='stage2發球機構圖.html'>Previous</a> <a href='W8.html'>Next</a> >> W8</div>
+<p>因要將球射出，加大馬達扭力後，造成圓筒晃動。</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/sCrbots4E8Y" title="YouTube video player" width="560"></iframe></p><br />stage2發球機構圖 << <a href='stage2發球機構圖.html'>Previous</a> <a href='W8.html'>Next</a> >> W8</div>
         
     <!-- footer -->
       <div class="container">
