--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -5,7 +5,8 @@
 <p>分組倉儲:<a href="https://github.com/40823218/stage1-bg5">https://github.com/40823218/stage1-bg5</a></p>
 <p>分組網站:<a href="https://40823218.github.io/stage1-bg5/content/About.html">https://40823218.github.io/stage1-bg5/content/About.html</a></p>
 <p>gitter:<a href="https://gitter.im/cd2021-bg5/community">https://gitter.im/cd2021-bg5/community</a></p>
-<p><strong>stage2-bg7:發球機</strong></p>
+<p><strong>stage2-bg7:乒乓球發球機</strong></p>
+<p>使用軟體:solidworks2017 coppeliasim</p>
 <p>分組倉儲:<a href="https://github.com/40823218/stage2-bg7">https://github.com/40823218/stage2-bg7</a></p>
 <p>分組網站:<a href="https://40823238.github.io/stage2-bg7/content/index.html">https://40823238.github.io/stage2-bg7/content/index.html</a></p>
 <p>gitter:<a href="https://gitter.im/stage2-bg7/community">https://gitter.im/stage2-bg7/community</a></p>
