--- a/config/content.htm
+++ b/config/content.htm
@@ -48,6 +48,7 @@
 <p><img alt="" height="281" src="/images/159287230_774899363449123_1098958105267543864_n.png" width="500"/></p>
 <p><img alt="" height="281" src="/images/158863078_437295080660300_5157174128881848114_n.png" width="500"/></p>
 <h2>0313修改圖檔</h2>
+<p><span>一開始放入coppeliasim開啟動力學特性後，零件就會全部解體，因此在修改一次圖檔</span></p>
 <p>組合圖</p>
 <p><img alt="" height="281" src="/images/159181414_463720324770126_3335785282015953195_n.png" width="500"/></p>
 <p>再組合時面和面應要留有間隙避免發生干涉</p>
