--- a/content/0313修改圖檔.html
+++ b/content/0313修改圖檔.html
@@ -134,6 +134,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">0312修改圖檔 << <a href='0312修改圖檔.html'>Previous</a> <a href='模擬測試.html'>Next</a> >> 模擬測試<br /><h1>0313修改圖檔</h1>
+<p><span>一開始放入coppeliasim開啟動力學特性後，零件就會全部解體，因此在修改一次圖檔</span></p>
 <p>組合圖</p>
 <p><img alt="" height="281" src="./../images/159181414_463720324770126_3335785282015953195_n.png" width="500"/></p>
 <p>再組合時面和面應要留有間隙避免發生干涉</p>
