--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -48,6 +48,7 @@
 <p><img alt="" height="281" src="/images/159287230_774899363449123_1098958105267543864_n.png" width="500"/></p>
 <p><img alt="" height="281" src="/images/158863078_437295080660300_5157174128881848114_n.png" width="500"/></p>
 <h2>0313修改圖檔</h2>
+<p><span>一開始放入coppeliasim開啟動力學特性後，零件就會全部解體，因此在修改一次圖檔</span></p>
 <p>組合圖</p>
 <p><img alt="" height="281" src="/images/159181414_463720324770126_3335785282015953195_n.png" width="500"/></p>
 <p>再組合時面和面應要留有間隙避免發生干涉</p>
@@ -95,3 +96,12 @@
 <p><span>因上次模擬失敗，經過修改尺寸後重新進行模擬。</span></p>
 <p><span>CoppelisaSim檔案下載:<a href="https://drive.google.com/file/d/1YWdvvi25aMz-AP9vr7GxXkrPSO2RPFI0/view?usp=sharing">https://drive.google.com/file/d/1YWdvvi25aMz-AP9vr7GxXkrPSO2RPFI0/view?usp=sharing</a></span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/zSUcFKTthro" title="YouTube video player" width="560"></iframe></p>
+<h2>0416模擬</h2>
+<p><span>CoppelisaSim檔案下載:<a href="https://drive.google.com/file/d/1g_bpdxLU1_pywdjowKo6yeOXV9ubbE1K/view?usp=sharing">https://drive.google.com/file/d/1g_bpdxLU1_pywdjowKo6yeOXV9ubbE1K/view?usp=sharing</a></span></p>
+<p>因前幾次模擬球都會亂飛，這次加上噴嘴。</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/0BKrbzrEB_Y" title="YouTube video player" width="560"></iframe></p>
+<p>雖然修改了籃子，不過卡球問題還是沒解決。</p>
+<p><img alt="" height="281" src="/images/unknown.png" width="500"/></p>
+<h1>W9</h1>
+<p><span>CoppelisaSim檔案下載:<a href="https://drive.google.com/file/d/1zCZRo2_0T8kJSp4S2QMp4amKAJA1G6jz/view?usp=sharing">https://drive.google.com/file/d/1zCZRo2_0T8kJSp4S2QMp4amKAJA1G6jz/view?usp=sharing</a></span></p>
+<p>將籃子改為管子，解決了卡球的問題。<iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/AhwFZV0kfcc" title="YouTube video player" width="560"></iframe></p>
